<resources>
    <string name="app_name">DigitalSky</string>

    <string name="account">手机号码/用户名</string>
    <string name="password">密码长度为6-18位，必须包含字母和数字</string>
    <string name="new_password">新密码长度为6-18位，必须包含字母和数字</string>
    <string name="verificationCode">验证码</string>
    <string name="mobile">手机号码</string>
    <string name="href_forget_password">忘记密码？</string>
    <string name="href_register">注册新账号</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forgetPsd">忘记密码</string>
    <string name="confirm">确认</string>

</resources>
