<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <!--background-->
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--标题栏-->
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/login"
            style="@style/titleTVStyle" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- 用户头像 -->
        <ImageView
            android:id="@+id/profile_photo"
            style="@style/proPicStyle"/>

        <!--用户名-->
        <RelativeLayout
            android:id="@+id/account"
            android:layout_marginTop="@dimen/dp_50"
            style="@style/itemStyle">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/icon_account"
                android:src="@drawable/icon_account"
                style="@style/iconStyle"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_toRightOf="@+id/icon_account"
                android:layout_toEndOf="@+id/icon_account"
                android:hint="@string/account"
                style="@style/etStyle"/>

        </RelativeLayout>
        <!--密码-->
        <RelativeLayout
            android:id="@+id/password"
            android:layout_marginTop="@dimen/dp_20"
            style="@style/itemStyle">

            <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/icon_password"
                android:src="@drawable/icon_password"
                style="@style/iconStyle"/>
            <EditText
                android:id="@+id/et_password"
                android:layout_toRightOf="@+id/icon_password"
                android:layout_toEndOf="@+id/icon_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/etStyle"/>
            <CheckBox
                android:contentDescription="@string/app_name"
                android:id="@+id/cb_password_visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/icon_not_see_psd"
                android:button="@null"
                android:checked="false"
                style="@style/iconStyle"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_forget_password"
            android:text="@string/href_forget_password"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/margin_huge"
            style="@style/ttHrefStyle"/>
        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            style="@style/btnStyle" />
        <TextView
            android:id="@+id/tv_register"
            android:text="@string/href_register"
            style="@style/ttHrefStyle"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>